--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,9 +43,7 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
         <span class="sr-only">RSS Feed</span>
       </a>
 
-      <p>
-        Exploring | Thinking | Connecting | Practicing
-      </p>
+      <p>Exploring | Thinking | Connecting | Practicing</p>
       {
         // only display if at least one social link is enabled
         SOCIALS.length > 0 && (
