--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -67,7 +67,7 @@
     }
 
     code {
-      @apply rounded bg-muted/75 p-1 break-words text-foreground before:content-none after:content-none font-mono;
+      @apply rounded bg-muted/75 p-1 font-mono break-words text-foreground before:content-none after:content-none;
     }
 
     .astro-code code {
