add vercel analytics & speed insights

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,8 @@ import { ClientRouter } from "astro:transitions";
 import { PUBLIC_GOOGLE_SITE_VERIFICATION } from "astro:env/client";
 import { SITE } from "@/config";
 import "@/styles/global.css";
+import Analytics from "@vercel/analytics/astro";
+import SpeedInsights from "@vercel/speed-insights/astro";
 
 export interface Props {
   title?: string;
@@ -133,10 +135,13 @@ const structuredData = {
 
     <ClientRouter />
 
+    <Analytics />
+
     <script is:inline src="/toggle-theme.js"></script>
   </head>
   <body>
     <slot />
+    <SpeedInsights />
   </body>
 </html>
 
